--- a/style.css
+++ b/style.css
@@ -1001,18 +1001,54 @@ position: relative;
   
   }
 
-
+@media only screen and (max-width: 370px) and (min-width: 350px){
+	
+	.box2 {
+    border: 2px solid #708591!important;
+    width: 110px!important;
+    font-size: 15px!important;
+    color: #49631b!important;
+    white-space: nowrap!important;
+    font-weight: 600!important;
+    height: 33px!important;
+    padding: 5px 58x!important;
+    position: relative!important;
+    padding: 2px 7px!important;
+    left: 98px!important;
+    top: -12px!important;
+    border-radius: 5px!important;
+    background: #b9ed70!important;
+}
+	
+}
 
 @media only screen and (max-width: 600px) {
 .company-info {
     width: 326px;height:305px;border-radius:0!important;}
 	
+	body,html{overflow-x:hidden;}
+	
 	.contact{width: 326px;
-   height: 334px;
+   height: 408px;
     border-radius: 0 0 10px 10px !important;
 }
+::placeholder{color:#9e9e9e!important;font-weight:600;font-size:13px;}
 
-input[type=date]{font-size:10px!important;}
+	  
+	  input[type="text"]
+{
+    font-size:13px;color:#000!important;
+}
+	  	  input[type="number"]
+{
+    font-size:13px;color:#000!important;
+}
+		  	  input[type="email"]
+{
+    font-size:13px;color:#000!important;
+}
+
+input[type=date]{font-size:13px!important;}
 
 #end-editing:before {
     content: "";
@@ -1048,60 +1084,63 @@ border-radius: 5px;}
     border: none;
     font-weight: 600;
     border-radius: 5px;
-    margin-top: -15px;
+    margin-top: -7px;
     font-size: 15px;
     width: 83px!important;
 }
 .tick {
-    position: relative;
-    top: -52px;
-    width: 14px;
-    left: 200px;
+     position: relative;
+    top: -55px;
+    width: 18px;
+    left: 237px;
 }
-#mob{    margin-left: 60px;}
+
+#mob{width: 130px!important;margin-left:43px;}
 
 #for {
     position: relative;
-    top: -74px;
-    left: 45px;
-    margin-left: 165px;
-    width: 43%!important;
+    top: -76px;
+    left:23px;
+    margin-left: 160px;
+    width:61%!important;
 }
 
 .flx7 {
   margin-top: -139px;
     position: relative;
     left: 2px;
-    top: 70px;
+    top: 92px;
 
 }
 
-#mail{margin-left: 60px;}
+#mail{margin-left:41px;width: 194px !important;}
 
 .club img{    width: 18px;}
 
+
 #bts2 {
-    top: -98px;
+    top: -102px;
     line-height: 16px;
     color: #000;
     box-shadow: none;
     width: 54px;
-    height: 20px;
+    height: 21px;
     line-height: 3px;
-    left: 195px;
+    left: 158px;
     font-size: 9px;
     width: 37px!important;
+
 }
 #edit{font-size: 16px;margin-top:20px!important;}
 #edit-button{width:16px;}
 
 .contact form button, .contact form input, .contact form textarea {
     position: relative;
-    margin-left: 81px;
+    margin-left: 94px;
     top: -30px;
     width: 100%;
-    width: 132px !important;
-    height: 20px;
+    width: 164px !important;
+    height: 21px;
     padding: 8px !important;
     padding: 1em;
     border: solid 1px #000;
@@ -1109,10 +1148,10 @@ border-radius: 5px;}
 }
 
 #selectbasic {
-    margin-left: 82px;
+    margin-left: 94px;
     top: -27px;
     position: relative;
-    width: 132px!important;
+    width: 164px!important;
     height: 20px;
     padding: 8px!important;
 }
@@ -1125,13 +1164,13 @@ border-radius: 5px;}
 
 #bts {
     position: relative;
-    top: -54px;
+    top: -55px;
     line-height: 7px;
     color: #000;
     width: 80px;
     height: 21px;
     white-space: nowrap !important;
-    left: 75px;
+    left:33px;
     width: 47px !important;
     box-shadow: none;
     font-size: 8px;
@@ -1141,12 +1180,12 @@ border-radius: 5px;}
     width: 110px;
     font-size: 16px;
     line-height: 3px;
-    height: 25px !important;
+    height: 28px !important;
     color: #000;
     margin-left: 100px;
-    width: 91px!important;
+    width: 95px!important;
     margin-top: 20px;
-}
+margin-left: 131px;}
 
 .heading {
     font-weight: 800;
@@ -1232,44 +1271,50 @@ user-select: none;}
     color: #6f7272;
     font-weight: 800!important;
     margin-bottom: 0.5rem;
-    font-size: 16px!important;
+    font-size: 18px!important;
 }
 label {
     white-space: nowrap;
-    font-size: 13px;
+    font-size: 14px;
     font-weight: 600;
     color: #000;
 }
 .contact form label {
     display: block;
-    margin-top: -13px;
+    margin-top: -13px; margin-left: -6px;
 }
 
 .flx1 {
     position: relative;
-    left: -1px;
+    left: 1px;
 }
 
 .flx2 {
     position: relative;
-    left: -1px;top:5px;
+    left: 1px;top:9px;
 }
 
 .flx3 {
     position: relative;
-    left: -1px;top:5px;
+    left: 1px;top:18px;
 }
 
 .flx4 {
     position: relative;
-    left: -1px;top:10px;
+    left: 1px;top:27px;
 }
+
+.flx6 {
+    position: relative;
+    left: -1px;top:37px;
+}
+
 
 .flx5 {
     position: relative;
-    left: -1px;top:11px;
+    left: 1px;top:35px;
 }
-
+.contact-detail{position: relative;top:7px;}
 
 	}
 	
